fixed error where input ins only visible on scroll

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -169,3 +169,10 @@ $navbar-dark-color: #DFDFDF;
       transform: scale(1);
   }
 }
+
+
+.chat-container {
+  max-height: 82vh;
+  height: calc(100vh - 175px - 111px) !important;
+  overflow-y: auto;
+}
